--- a/views/beers.hbs
+++ b/views/beers.hbs
@@ -1,10 +1,11 @@
-<section>
-    <ul>
-        {{#each beers }}
-            <li> {{ this.image }} </li>
-            <li> {{ this.name }} </li>
-            <li> {{ this.description }} </li>
-            <li> {{ this.tagline }} </li>
-        {{/each }}
-    </ul>
-</section>
+<div>
+  <h1>All Beers</h1>
+  {{#each beers}}
+    <h3> Name: {{this.name}} </h3>
+    <h4>{{this.tagline}}</h4>
+    <p>Description:<br />
+      {{this.description}}</p>
+    <img src={{this.image_url}} alt='beer' width='50' height='180' />
+
+  {{/each}}
+</div>
