--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <div>
 <img src="../images/beer.png" width="200" height="200">
 <button> <a href="/beers">Check the beers </a></button>
-</button> <a href="/random-beer"> check a random beer</a> </button>
+</button> <a href="/randombeer"> check a random beer</a> </button>
 </div>
