--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
         <nav>
             <a href="/">Home</a>
             <a href="/beers">Beers</a>
-            <a href="/random-beer">Random Beers</a>
+            <a href="/randombeer">Random Beers</a>
         </nav>
 
         {{{ body }}}
